# ComfyUI-MaskContourProcessor

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  tags
nodes/: nodes.py
tests/: test_mask_contour_processor.py
web/: index.html
web/js/: index.js  maskProcessor.js
